Fixed the spacing at the top of the page, especially when an ad blocker is enabled.

--- a/styles/main.sass
+++ b/styles/main.sass
@@ -12,6 +12,7 @@ $dark-grey: #666666
 
 body
   background: $background
+  padding-top: 50px
   position: relative
 
 ////////////
@@ -24,7 +25,7 @@ header
     width: 100%
     height: 50px
     background: $blue1
-    margin: 0
+    margin: 0 0 10px
     padding: 0
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.4)
     z-index: 99
@@ -83,7 +84,7 @@ header
 
   .ad-top-wrapper
     overflow: auto
-    margin: 60px 0 10px
+    margin: 20px 0 0px
     width: calc(100% - 300px)
     //transition: width 0.3s ease-in
     //-webkit-transition: width 0.3s ease-in
@@ -183,6 +184,7 @@ header
 .page-content
   .wrapper
     width: calc(100% - 300px)
+    padding-top: 20px
     transition: width 0.3s ease-in
     -webkit-transition: width 0.3s ease-in
 
